# rus

./: .gitignore  Cargo.toml  Rocket.toml
rus/: Justfile
src/: main.rs
