[package]
name = "rus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
just = "1.23.0"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
diesel = { version = "2.1.4", features = ["sqlite"] }
serde = { version = "1.0.196", features = ["derive"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
